Update purchase Order : - the cost price is now fetching from order line - purchase_price = unit_price - prix de revient works

--- a/Install-erp/addons/purchase/i18n/fr.po
+++ b/Install-erp/addons/purchase/i18n/fr.po
@@ -26,6 +26,16 @@ msgstr "# Factures fournisseurs"
 msgid "# of Lines"
 msgstr "# de lignes"
 
+
+#. module: purchase
+#: model_terms:ir.ui.view,arch_db:purchase.purchase_order_form
+msgid "Financial Details"
+msgstr "Détails Financier"
+
+
+
+
+
 #. module: purchase
 #. odoo-python
 #: code:addons/addons/purchase/models/purchase_order.py:0
